# Stage-1-Training

./: pyproject.toml  requirements.txt  stage1_lm.filesliced.jsonl  stage1_lm.jsonl
Manifests/: stage1.jsonl  stage1_math_code.jsonl
Package/stage-1-hybrid/: README.md  requirements.txt  stage1_runner.sh  stage1_wp.yaml
Package/stage-1-hybrid/stage1_hybrid/: __init__.py  cli.py  data.py  eval.py  gcs_io.py  interleave.py  losses.py  model_init.py  precompute_hybrid_logits.py  prep.py  runtime_setup.py  stream_io.py  teacher.py  train.py  utils.py
Package/stage-1-hybrid/stage1_hybrid/configs/: hybrid_teachers.yaml
Package/stage-1-hybrid/stage1_hybrid/tool_use/: __init__.py  calculator.py  registry.py  scratchpad.py  traces.py
Package/stage-1-hybrid/tests/: test_hybrid_router.py  test_missing_logits_policy.py  test_precompute_only_mc.py
Preprocess-Toolkit/preprocess_toolkit/: __init__.py  driver.py  io.py  manifest_builder.py  normalize.py  shard.py
Preprocess-Toolkit/preprocess_toolkit/config/: datasets.yaml
Preprocess-Toolkit/preprocess_toolkit/pipelines/: __init__.py  asdiv.py  c4.py  codesearchnet.py  dolma.py  fineweb_edu.py  gsm8k.py  svamp.py  wikipedia.py  wikitext.py
