[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "preprocess-toolkit"
version = "0.1.0"
description = "Streaming preprocessing toolkit for Liquid LLM datasets"
authors = [{name = "Liquid LLM"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["preprocess_toolkit"]
